[package]
name = "cuda-instruction-set"
version = "0.1.0"
edition = "2021"
description = "80 opcodes with assembler and A2A encoding"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-instruction-set"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

